--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 <body>
     <header>
         <h1><span class="accent">Welcome </span>to my <span class="accent-2">task manager</span></h1>
+        <button class="toggleFormButton">Hide Form</button>
     </header>
     <!----------------------Main----------------------------->
     <main class="page-container">
         <section class="task-list" id="task-list">
-            <button class="toggleFormButton">Hide Form</button>
+            <div id="tasks">
+
+            </div>
         </section>
         <section class="form" id="form">
             <form id="task-form" class="task-form">
@@ -33,7 +36,7 @@
                     <textarea id="txtDescription" name="task-description" id="task-description" cols="30" rows="5" placeholder="Task Description"></textarea>
                 </div>
                 <div class="inputs">
-                    <input id="txtDueDate"placeholder="Due Date" onfocus="(this.type='date')" onblur="(this.type='text')">
+                    <input id="txtDueDate"placeholder="Due Date" onfocus="(this.type='datetime-local')" onblur="(this.type='text')">
                 </div>
                 <div class="inputs">
                     <input id="txtLocation" type="text" placeholder="Location">
@@ -47,11 +50,11 @@
                 <div class="inputs">
                     <select id="txtFrequency" name="frequency" id="frequency">
                         <option value="">Task Frequency</option>
-                        <option value="One-time">One-time</option>
-                        <option value="Daily">Daily</option>
-                        <option value="Weekly">Weekly</option>
-                        <option value="Monthly">Monthly</option>
-                        <option value="Annually">Annually</option>
+                        <option value="1">One-time</option>
+                        <option value="2">Daily</option>
+                        <option value="3">Weekly</option>
+                        <option value="4">Monthly</option>
+                        <option value="5">Annually</option>
                     </select>
                 </div>
                 <div class="inputs">
@@ -75,6 +78,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/task.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
