--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <header>
         <h1><span class="accent">Welcome </span>to my <span class="accent-2">task manager</span></h1>
         <button class="toggleFormButton">Hide Form</button>
+        <div class="task-functions">
+            <label class="task-remaining">Tasks Remaining: <span class="task-count"></span></label>
+            <button class="clear-all-tasks-button">Clear All Tasks</button>
+        </div>
     </header>
     <!----------------------Main----------------------------->
     <main class="page-container">
