--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1><span class="accent">Welcome </span>to my <span class="accent-2">task manager</span></h1>
+        <h1><span class="accent">Welcome </span>to My <span class="accent-2">Task Manager</span></h1>
         <button class="toggleFormButton">Hide Form</button>
         <div class="task-functions">
             <label class="task-remaining">Tasks Remaining: <span class="task-count"></span></label>
